--- a/AppTFG/AppTFG/Paginas/PantallaCompleta.xaml
+++ b/AppTFG/AppTFG/Paginas/PantallaCompleta.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:video="clr-namespace:AppTFG.FormsVideoLibrary"
-             x:Class="AppTFG.Paginas.Page1"
+             x:Class="AppTFG.Paginas.PantallaCompleta"
              NavigationPage.HasNavigationBar="False"
              NavigationPage.HasBackButton="True"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
