--- a/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
@@ -7,40 +7,40 @@
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked"/>
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked"/>
     </ContentPage.ToolbarItems>
-    <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
-        <StackLayout Spacing="0" Padding="0" Margin="0">
-            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
-            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="150"/>
-                    <RowDefinition Height="250"/>
-                    <RowDefinition Height="300"/>
-                </Grid.RowDefinitions>
-                <Image Grid.Row="0" x:Name="imgRuta" Source="{Binding ImagenPrincipal}" 
-                            
-                           Aspect="AspectFill" HeightRequest="150"/>
-                <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                    <StackLayout>
-                        <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Entry x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
+    <Grid Padding="0" Margin="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="0.65*"/>
+        </Grid.RowDefinitions>
+        <Image Grid.Row="0" x:Name="imgRuta" Source="{Binding ImagenPrincipal}" 
+               Aspect="AspectFill" HeightRequest="150"/>
+        <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
+            <StackLayout>
+                <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Entry x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
                                 Placeholder="Ingresa el nombre de la ruta" FontFamily="BSDRegular"
                                 PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium"/>
-                            <Button Grid.Column="1" x:Name="btnImagen" Text="Foto ruta" 
+                    <Button Grid.Column="1" x:Name="btnImagen" Text="Foto ruta" 
                                 BackgroundColor="Transparent" Margin="0" FontSize="Small"
                                 TextColor="{DynamicResource PrimaryTextColor}" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
-                        </Grid>
-                    </StackLayout>
-                </Frame>
-                <StackLayout Grid.Row="2" Spacing="0" Padding="0" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
-                    <StackLayout x:Name="stackMapa" Spacing="0" Padding="0" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1"/>
-                    <Button Text="Editar ruta" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" FontSize="Large" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="150" HeightRequest="50" Margin="10" Clicked="BtnEditar_Clicked"/>
-                </StackLayout>
-            </Grid>
+                </Grid>
+            </StackLayout>
+        </Frame>
+        <StackLayout Grid.Row="2" Spacing="0" Padding="0" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
+            <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" Margin="0"/>
+            <StackLayout x:Name="stackMapa" Spacing="0" Padding="0" Margin="0, 0, 0, 5" HeightRequest="-1" WidthRequest="-1"/>
+            <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" >
+                <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+            </StackLayout>
+            <Button Text="Editar ruta" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" FontSize="Medium" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="150" HeightRequest="45" Margin="5" Clicked="BtnEditar_Clicked"/>
         </StackLayout>
-    </ScrollView>
+    </Grid>
 </ContentPage>
