--- a/AppTFG/AppTFG/Paginas/PaginaVistaActividad.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaActividad.xaml
@@ -5,7 +5,7 @@
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
         <StackLayout Spacing="0" Padding="0" Margin="0">
-            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
             <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.3*"/>
