--- a/AppTFG/AppTFG/Paginas/SubirFoto.xaml
+++ b/AppTFG/AppTFG/Paginas/SubirFoto.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
         <ScrollView VerticalScrollBarVisibility="Never">
             <StackLayout>
-                <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center"/>
                 <StackLayout Padding="15">
                     <Grid>
                         <Grid.RowDefinitions>
