--- a/AppTFG/AppTFG/Paginas/PaginaActividad.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaActividad.xaml
@@ -9,39 +9,54 @@
     </ContentPage.ToolbarItems>
     <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
         <StackLayout Spacing="0" Padding="0" Margin="0">
-            <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center"/>
+            <!--<ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center"/>-->
             <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="0.3*"/>
+                    <RowDefinition Height="0.2*"/>
                     <RowDefinition Height="0.5*"/>
                     <RowDefinition Height="0.2*"/>
                 </Grid.RowDefinitions>
-                <Image Grid.Row="0" x:Name="imgActividad" 
-                           VerticalOptions="StartAndExpand" HorizontalOptions="Center" 
-                           Aspect="AspectFill" HeightRequest="-1" 
-                           WidthRequest="-1"/>
-                <Frame Grid.Row="1" CornerRadius="15" Padding="0">
+                <Image Grid.Row="0" x:Name="imgActividad" Source="{Binding ImagenPrincipal}"
+                           Aspect="AspectFill" HeightRequest="200"/>
+                <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
                     <StackLayout>
                         <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="45"/>
-                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="50"/>
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Entry Grid.Column="0" Grid.Row="0" x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
-                                Placeholder="Ingresa el nombre de la actividad" 
-                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
-                            <Button Grid.Column="1" Grid.Row="0" x:Name="btnImagen" Text="Foto ruta" 
-                                BackgroundColor="Transparent" Margin="0" FontSize="Small"
+                            <Entry Grid.Column="0" Grid.Row="0" x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}"  
+                                Placeholder="Ingresa el nombre de la actividad" Text="{Binding Nombre}"
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                FontSize="Medium" FontFamily="BSDRegular" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="3"/>
+                            <Button Grid.Column="3" Grid.Row="0" x:Name="btnImagen" Text="Foto ruta" 
+                                BackgroundColor="{DynamicResource TertiaryTextColor}" Margin="0" FontSize="Small"
                                 TextColor="{DynamicResource PrimaryTextColor}" WidthRequest="90"  
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked" FontFamily="BSDRegular"/>
+                            <Editor Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
+                                Placeholder="Ingresa una descripción de la activiad" AutoSize="TextChanges"
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
+                            <Label Text="Fecha:" Grid.Row="2" Grid.Column="0" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}" FontSize="Medium"/>
+                            <Label Text="{Binding Fecha}" Grid.Row="2" Grid.Column="1" FontFamily="BSDRegular" Grid.ColumnSpan="3" FontSize="Medium" TextColor="{DynamicResource PrimaryTextColor}"/>
+                            <Label Text="Para cambiar la fecha pulse en la fecha que se muestra a continuación: " Grid.Row="3" Grid.Column="0" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}" Grid.ColumnSpan="2"/>
+                            <DatePicker  x:Name="datePicker" Format="D" Grid.Row="3" Grid.Column="2" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}" Grid.ColumnSpan="2" Date="01/01/2021"/>
+                            <Label  Text="Hora:" Grid.Row="4" Grid.Column="0" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}" FontSize="Medium"/>
+                            <Label Text="{Binding Hora}" Grid.Row="4" Grid.Column="1" FontFamily="BSDRegular" Grid.ColumnSpan="3" FontSize="Medium" TextColor="{DynamicResource PrimaryTextColor}"/>
+                            <Label Text="Para cambiar la hora pulse en la hora que se muestra a continuación: " Grid.Row="5" Grid.Column="0" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}" Grid.ColumnSpan="2"/>
+                            <TimePicker x:Name="timePicker" Format="T" Grid.Row="5" Grid.Column="2" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}" Grid.ColumnSpan="2" Time="00:00:01"/>
                         </Grid>
                     </StackLayout>
                 </Frame>
-                <Button Grid.Row="2" Text="Iniciar actividad" TextColor="{DynamicResource PrimaryTextColor}" BackgroundColor="{DynamicResource PageBackgroundColor}"/>
             </Grid>
         </StackLayout>
     </ScrollView>
